<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mdssview</string>
    <string name="custom_flag">Mdssview</string>
    <string name="client_flag">Mdssview</string>
    <!-- 侧滑栏标题 -->
    <string name="leftmenu_main">Main Menu</string>
    <string name="leftmenu_live">Live Preview</string>
    <string name="leftmenu_playback">Playback</string>
    <string name="leftmenu_devicemanager">Device Manage</string>
    <string name="leftmenu_alarmlist">Alarm Message</string>
    <string name="leftmenu_filemanager">File Manage</string>
    <string name="leftmenu_favorite">Favorite</string>
    <string name="leftmenu_localsetting">Local Settings</string>
    <!-- activity标题 -->
    <string name="title_livepreview">Live Preview</string>
    <string name="title_localsetting">Local Setting</string>
    <string name="title_More">More</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_devicemanager">Device Manage</string>
    <string name="title_playback">PlayBack</string>
    <string name="title_adddevice">Add Device</string>
    <string name="title_about">About</string>
    <string name="title_p2p">P2P</string>
    <string name="title_ip">IP</string>
    <string name="title_login">Login</string>
    <string name="title_qrcode">Share Devices</string>
    <string name="title_ptzLength">PTZ Length</string>
    <string name="title_scan">Scan</string>
    <string name="title_modifypwd">Modify Password</string>
    <string name="title_devicesetting">Device Setting</string>
    <string name="title_modifyname">Modify Name</string>
    <string name="title_chooseplaybackdevice">Choose Device</string>
    <string name="title_register">Register</string>
    <string name="title_findpwd">Forget Password</string>
    <string name="title_cameraparam">Camera Parameters</string>
    <string name="title_wifisetting">WIFI Setting</string>
    <string name="title_alarmsetting">Alarm Setting</string>
    <string name="title_accountmanage">Account</string>
    <!-- 添加设备 -->
    <string name="item1">p2p</string>
    <string name="item4">IP/Address</string>
    <string name="item6">导入云端设备</string>
    <string name="adddevice_type">Device Type:</string>
    <string name="adddevice_name">Name:</string>
    <string name="adddevice_serias">Device ID:</string>
    <string name="adddevice_user">User Name:</string>
    <string name="adddevice_pwd">Password:</string>
    <string name="adddevice_monitor">Live Preview:</string>
    <string name="adddevice_playback">Playback:</string>
    <string name="adddevice_startplay">Start Preview</string>
    <string name="adddevice_ipaddress">IP Address</string>
    <string name="adddevice_port">Port</string>
    <string name="adddevice_startsearch">Search Device</string>
    <!-- 本地设置 -->
    <string name="ptzlength">PTZ length</string>
    <string name="scale">scale</string>
    <string name="streamType">Stream Type</string>
    <string name="nodisturb">disturb</string>
    <string name="alarmsound">Alarm Sound</string>
    <string name="realtime">real time</string>
    <string name="smooth">smooth</string>
    <!-- 登陆 -->
    <string name="login_user">User:</string>
    <string name="login_pwd">Password:</string>
    <string name="login_login">Login</string>
    <string name="login_locallogin">Local Login</string>
    <string name="login_autologin">Auto-Login</string>
    <string name="login_register">Register</string>
    <string name="login_findpwd">Forget Password</string>
    <!--注册-->
    <string name="register_username">username</string>
    <string name="register_password">password</string>
    <string name="register_ensurepwd">ensure password</string>
    <string name="register_email">email</string>
    <string name="register_register">register</string>
    <!--修改密码-->
    <string name="modifypwd_pwd">Password</string>
    <string name="modifypwd_newpwd">New Password</string>
    <string name="modifypwd_ensurepwd">Ensure Password</string>
    <string name="modifypwd_sure">Ok</string>

    <!--找回密码-->
    <string name="forgetpwd_user">User Name</string>
    <string name="forgetpwd_find">Find Password</string>

    <!-- 设备列表 -->
    <string name="devicelist_share">生成设备名片</string>

    <!--镜头设置-->
    <string name="camerasetting_modifyname">Modify Name</string>
    <string name="camerasetting_wifisetting">WIFI Setting</string>
    <string name="camerasetting_alarm">Alarm Setting</string>
    <string name="camerasetting_cameraparam">Camera Parameters</string>
    <!--摄像机参数-->
    <string name="cameraparam_rotate">Flip</string>

    <!--WIFI配置-->
    <string name="wifisetting_on_off">WIFI on/off:</string>
    <string name="wifisetting_synac_to_device">Synchronous  WIFI to the device</string>
    <string name="wifisetting_enter_ssid">Enter WIFI Name</string>
    <string name="wifisetting_enter_pass">Enter WIFI Password</string>
    <string name="wifisetting_show_pass">Show password</string>
    <string name="wifisetting_ok">OK</string>
    <string name="wifisetting_cancel">cancel</string>
    <string name="wifisetting_nodataerro">No Data</string>

    <!--添加IP地址-->
    <string name="addip_getchannelfail">get channel fail</string>
    <string name="addip_add_success">Added successfully</string>

    <!--添加p2p地址-->
    <string name="addp2p_getchannelfail">get channel fail</string>
    <string name="addp2p_modify_success">Successfully modified</string>
    <string name="addp2p_add_success">Added successfully</string>
    <string name="addp2p_please_choose_channel">Channel</string>

    <!--设备设置-->
    <string name="devicesetting_modify_conn_param">Modify connection param</string>
    <string name="devicesetting_change_password">Change password</string>
    <string name="devicesetting_sync_time">Sync time</string>
    <string name="devicesetting_delete">Delete</string>
    <!--选择回放设备-->
    <string name="chooseplayback_starttime">start time:</string>
    <string name="chooseplayback_endtime">end time:</string>

    <!--搜索本地设备-->
    <string name="searchdevice_channel">Channels:</string>


    <!--报警设置-->
    <string name="alarmsetting_name">Name</string>
    <string name="alarmsetting_push">Alert notify</string>
    <string name="alarmsetting_toggle">Check switch</string>
    <string name="alarmsetting_sensor">Sensitivity</string>
    <string name="alarmsetting_save">Save</string>

    <!--更多-->
    <string name="more_accountmanage">Account</string>
    <string name="more_systemsetting">Settings</string>
    <string name="more_about">About</string>
    <!--账号管理-->
    <string name="accountmanage_autologin">Auto login</string>
    <string name="accountmanage_modify_pwd">Modify password</string>

    <!--选择设备-->
    <string name="choosedevice_startplay">Start Play</string>

    <!-- 登陆返回的状态码 -->
    <string name="UNKNOWN_ERROR">未连接</string>
    <string name="LOGIN_OK">登陆成功</string>
    <string name="NPC_D_MPI_MON_ERROR_SYS_ERROR">系统错误</string>
    <string name="NPC_D_MPI_MON_ERROR_CONNECT_FAIL">连接失败</string>
    <string name="NPC_D_MPI_MON_ERROR_USERID_ERROR">用户名错误</string>
    <string name="NPC_D_MPI_MON_ERROR_USERPWD_ERROR">密码错误</string>
    <string name="NPC_D_MPI_MON_ERROR_USER_PWD_ERROR">用户名或密码错误</string>
    <string name="NPC_D_MPI_MON_ERROR_CONNECTING">正在连接</string>
    <string name="NPC_D_MPI_MON_ERROR_CONNECTED">已连接</string>
    <string name="NPC_D_MPI_MON_ERROR_PLAY_FAIL">播放失败</string>
    <string name="NPC_D_MPI_MON_ERROR_FILE_NONENTITY">file not exists</string>
    <string name="NPC_D_MPI_MON_ERROR_EXEC_ORDER_CALL_FAIL">连接失败</string>
    <string name="NPC_D_MPI_MON_ERROR_EXEC_ORDER_RET_FAIL">连接失败</string>
    <string name="NPC_D_MPI_MON_ERROR_ALLOC_RES_FAIL">分配资源失败</string>
    <string name="NPC_D_MPI_MON_ERROR_NO_CONNECT_CAMERA">未连接摄像机</string>
    <string name="NPC_D_MPI_MON_ERROR_INNER_OP_FAIL">内部操作失败</string>
    <string name="NPC_D_MPI_MON_ERROR_PLAYING">正在播放</string>
    <string name="NPC_D_MPI_MON_ERROR_NO_PLAY">未播放</string>
    <string name="NPC_D_MPI_MON_ERROR_NONSUP_VENDOR">不支持的厂家</string>
    <string name="NPC_D_MPI_MON_ERROR_REJECT_ACCESS">权限不够</string>
    <string name="NPC_D_MPI_MON_ERROR_CAMERA_OFFLINE">摄像机离线</string>
    <string name="NPC_D_MPI_MON_ERROR_ACCOUNT_LOGINED">帐号已登录</string>
    <string name="NPC_D_MPI_MON_ERROR_ACCOUNT_HAVE_EXPIRED">用户帐号已过有效期</string>
    <string name="NPC_D_MPI_MON_ERROR_ACCOUNT_NO_ACTIVE">用户帐号未激活</string>
    <string name="NPC_D_MPI_MON_ERROR_TIMESECT_NOT_ALLOW_CAMERA">该时间段不允许访问该摄像机</string>
    <string name="note_login_again">please relogin</string>

    <!-- 报警类型 -->
    <string name="alarminfo_move">移动侦测报警</string>
    <string name="alarminfo_equipment">Device Offline</string>
    <string name="alarminfo_video_cover">视频遮挡报警</string>
    <string name="alarminfo_video_lose">视频丢失报警</string>
    <string name="alarminfo_probe">探头报警</string>

    <!-- 提示 -->
    <string name="msg_input_cannot_empty">input cannot be empty</string>
    <string name="name_has_been_exist">the name is already exist</string>
    <string name="password_notequal">the password is not the same</string>
    <string name="plear_enter_username">please enter your username</string>
    <string name="plear_enter_password">please enter your password</string>
    <string name="msg_register_success">register success</string>
    <string name="msg_register_fail">register fail</string>
    <string name="msg_username_already_exist">the username is already exist</string>
    <string name="msg_usr_pwd_error">username or password error</string>
    <string name="msg_login_fail">login fail</string>
    <string name="msg_connecting_please_wait">Connecting，please wait...</string>
    <string name="msg_email_format_error">email format error</string>
    <string name="msg_pwd_length_error">password length cannot less than 6</string>
    <string name="msg_resetemail_has_been_sent">The reset message has been sent to your email</string>
    <string name="msg_get_params_fail">get parameters fail</string>
    <string name="msg_set_params_success">set success</string>
    <string name="msg_set_params_fail">set fail</string>
    <string name="msg_delete_success">successfully deleted</string>
    <string name="msg_please_select_file">Please select the file to be deleted</string>
    <string name="msg_delete_all_alarm">Are you sure you want to delete all alarms?</string>
    <string name="msg_exit">Are you sure to exit?</string>
    <string name="msg_title">Message</string>
    <string name="msg_ok">Ok</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_snap_success">snap success</string>

    <!--云台TAG-->
    <string name="ptz_up">ptz_up</string>
    <string name="ptz_down">ptz_down</string>
    <string name="ptz_left">ptz_left</string>
    <string name="ptz_right">ptz_right</string>
    <string name="ptz_left_up">ptz_left-up</string>
    <string name="ptz_left_down">ptz_left_down</string>
    <string name="ptz_right_up">ptz_right_up</string>
    <string name="ptz_right_down">ptz_right_down</string>
    <string name="ptz_focus_add">ptz_foucos_add</string>
    <string name="ptz_focus_reduce">ptz_foucos_reduce</string>
    <string name="ptz_aperture_add">ptz_aperture_add</string>
    <string name="ptz_aperture_reduce">ptz_aperture_reduce</string>
    <string name="NPC_D_MPI_MON_ERROR_ACCOUNT_DEBT_STOP">用户帐号已欠费停机</string>
    <string name="modify_password">Modify Password</string>
    <string name="title_aliammessage">Message List</string>
    <string name="modify_logout">Logout</string>


    <string name="message_title">Your device: %1$s</string>

    <string-array name="channels">
        <item>1</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
    </string-array>
</resources>
