<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toggle="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout style="@style/titlebar">

        <Button
            android:id="@+id/leftBtn"
            style="@style/nav_button"
            android:layout_marginLeft="15dp"
            android:background="@drawable/title_back_n"/>

        <TextView
            style="@style/tv_title"
            android:text="@string/title_localsetting"/>
    </RelativeLayout>

    <TextView
        style="@style/line"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/rl_ptz"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/bg_selectitem">

        <TextView
            style="@style/simpleTextView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/ptzlength"/>

        <TextView
            android:id="@+id/tv_ptz"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/ico_next_n"
            android:gravity="right|center_vertical"
            android:paddingRight="15dp"
            android:text="4x"
            android:textColor="@color/textColor_light"/>
    </LinearLayout>

    <TextView style="@style/line"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            style="@style/simpleTextView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/scale"/>

        <com.widget.ToggleButton
            android:id="@+id/tg_scale"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            toggle:offColor="@color/white"
            toggle:onColor="@color/blue_light"/>
    </LinearLayout>

    <TextView style="@style/line"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            style="@style/simpleTextView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/streamType"/>

        <RadioGroup
            android:id="@+id/rg_stream"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_realtime"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_radiobtn_left"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:text="@string/realtime"
                android:textColor="@color/bg_simpletextview"/>

            <RadioButton
                android:id="@+id/rbtn_smooth"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_radiobtn_right"
                android:button="@null"
                android:gravity="center"
                android:paddingLeft="0dp"
                android:text="@string/smooth"
                android:textColor="@color/bg_simpletextview"/>
        </RadioGroup>
    </LinearLayout>

    <TextView
        style="@style/line"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_modifyPwd"
            style="@style/simpleTextView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/ico_next_n"
            android:text="@string/modify_password"/>
    </LinearLayout>

    <TextView style="@style/line"/>

    <TextView
        style="@style/line"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            style="@style/simpleTextView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/nodisturb"/>

        <com.widget.ToggleButton
            android:id="@+id/tg_disturb"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            toggle:offColor="@color/white"
            toggle:onColor="@color/blue_light"/>
    </LinearLayout>

    <TextView style="@style/line"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_setting_height"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            style="@style/simpleTextView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/alarmsound"/>

        <com.widget.ToggleButton
            android:id="@+id/tg_alarmsound"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            toggle:offColor="@color/white"
            toggle:onColor="@color/blue_light"/>
    </LinearLayout>

    <TextView style="@style/line"/>

    <Button
        android:id="@+id/btn_logout"
        style="@style/simpleTextView"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/modify_logout"
        android:visibility="gone"/>

</LinearLayout>