<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        style="@style/titlebar"
        android:elevation="2dp">

        <Button
            android:id="@+id/leftBtn"
            style="@style/nav_button"
            android:layout_marginLeft="15dp"
            android:background="@drawable/title_back_n"/>

        <TextView
            style="@style/tv_title"
            android:text="@string/title_modifypwd"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_adddevice_item_height"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/adddevice_textview"
            android:layout_width="80dp"
            android:gravity="center"
            android:text="@string/modifypwd_pwd"/>

        <EditText
            android:id="@+id/et_pwd"
            style="@style/adddevice_edittext"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:inputType="text"/>

        <TextView style="@style/line"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_adddevice_item_height"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/adddevice_textview"
            android:layout_width="80dp"
            android:gravity="center"
            android:text="@string/modifypwd_newpwd"/>

        <EditText
            android:id="@+id/et_newpwd"
            style="@style/adddevice_edittext"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:inputType="text"/>

        <TextView style="@style/line"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/item_adddevice_item_height"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/adddevice_textview"
            android:layout_width="80dp"
            android:gravity="center"
            android:text="@string/modifypwd_ensurepwd"/>

        <EditText
            android:id="@+id/et_ensurepwd"
            style="@style/adddevice_edittext"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:inputType="text"/>

        <TextView style="@style/line"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_sure"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_login_btn"
        android:text="@string/modifypwd_sure"
        android:textColor="@color/black"
        android:textSize="16sp"/>
</LinearLayout>